--- a/Spillmotorarkitektur_1/Spillmotorarkitektur_1.vcxproj.filters
+++ b/Spillmotorarkitektur_1/Spillmotorarkitektur_1.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="B-Spine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Elevation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
