--- a/Spillmotorarkitektur_1/Spillmotorarkitektur_1.vcxproj
+++ b/Spillmotorarkitektur_1/Spillmotorarkitektur_1.vcxproj
@@ -134,7 +134,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="B-Spine.cpp" />
+    <ClCompile Include="Elevation.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
